--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 rsa.public-key=classpath:certs/public.pem
 rsa.private-key=classpath:certs/private.pem
+spring.h2.console.enabled=true
+spring.datasource.generateUniqueName=false
+spring.datasource.name=security
+spring.jpa.openInView=false
+spring.jpa.generateDdl=true
+spring.jpa.showSql=true
+spring.jpa.hibernate.ddlAuto=update
